loki-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    istio.io/rev: canary
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    istio-injection: disabled
