loki-stack/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: grafana
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.awes.one
    tls:
      mode: SIMPLE
      credentialName: awes-one-cert
    port:
      name: https
      number: 443
      protocol: HTTPS
  - hosts:
    - grafana.awes.one
    tls:
      httpsRedirect: true
    port:
      name: http
      number: 80
      protocol: HTTP
