loki-stack/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
    - kind: Gateway
      name: kubernetes-gateway
      namespace: istio-system
  hostnames:
    - grafana.awes.one
  rules:
    - backendRefs:
        - name: loki-stack-charts-grafana
          port: 80
